--- a/docker/typst/docker-compose.yml
+++ b/docker/typst/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
   typst-runner:
     image: typst-runner:latest
-    build:
-      context: .
     container_name: typst-runner
     restart: always
+    labels:
+      - "com.centurylinklabs.watchtower.enable=false"
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
     environment:
-      # Configura questi valori con le tue informazioni GitHub
-      REPO_URL: "https://github.com/Toniolo-Marco/git-for-dummies"
-      RUNNER_NAME: "typst-runner"
-      RUNNER_TOKEN: ""
-      # ORG_RUNNER: true
+      - RUNNER_MANAGER_TOKEN=
+      - RUNNER_NAME=typst-runner
+      - REPO_OWNER=
+      - REPO_NAME=git-for-dummies
