--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,7 +15,7 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Compile LaTeX document
+      - name: Compile Typst document
         id: compile
         shell: bash
         run: |
