Inizio sezione inviter

--- a/docker/typst/Dockerfile
+++ b/docker/typst/Dockerfile
@@ -9,11 +9,11 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 SHELL ["bash", "-c"]
 
-RUN ./bin/installdependencies.sh && apt-get install -y xz-utils jq curl  && apt-get autoclean && apt-get autoremove --yes && rm -rf /var/lib/{apt,dpkg,cache,log}/
-
-# Install Typst
-RUN curl -L https://github.com/typst/typst/releases/latest/download/typst-x86_64-unknown-linux-musl.tar.xz -o typst.tar.xz \
+RUN ./bin/installdependencies.sh && apt-get install -y xz-utils jq curl \
+    && apt-get autoclean && apt-get autoremove --yes && rm -rf /var/lib/{apt,dpkg,cache,log}/ \
+    && curl -L https://github.com/typst/typst/releases/latest/download/typst-x86_64-unknown-linux-musl.tar.xz -o typst.tar.xz \
     && tar -xf typst.tar.xz \
+    && apt-get purge xz-utils -y \
     && mv typst-x86_64-unknown-linux-musl/typst /usr/local/bin/ \
     && rm -rf typst.tar.xz typst-x86_64-unknown-linux-musl
 
