--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,6 +3,8 @@ name: Build & Release
 on:
     push:
         branches: ["main"]
+        paths:
+          - src/**    
     workflow_dispatch:
 
 jobs:
