--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,63 +1,74 @@
 name: Build & Release
 
 on:
-    push:
-        branches: ["main"]
-        paths:
-          - book/**
-          - slides/**
-    workflow_dispatch:
+  push:
+    branches: ["main"]
+    paths:
+      - book/**
+      - slides/**
+  workflow_dispatch:
 
 jobs:
-    Build_And_Release:
-        timeout-minutes: 720
-        runs-on: [self-hosted, typst]
-        steps:
-            - name: Checkout
-              id: checkout
-              uses: actions/checkout@v4
+  Build_And_Release:
+    timeout-minutes: 720
+    runs-on: [self-hosted, typst]
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
 
-            - name: Typst Update
-              id: update
-              shell: bash
-              run: |
-                  # update the typst runner
-                  typst update
+      - name: Typst Update
+        id: update
+        shell: bash
+        run: |
+          # update the typst runner
+          typst update
 
-            - name: Compile Typst Files
-              id: compile
-              shell: bash
-              run: |
-                  # compile the main file
-                  typst compile slides/main.typ --root=./ --font-path=${{ github.workspace }}/book/fonts/noto-sans ${{ github.workspace }}/git-for-dummies-slides.pdf &
-                  typst compile book/main.typ --root=./ --font-path=${{ github.workspace }}/slides/fonts/noto-sans ${{ github.workspace }}/git-for-dummies-book.pdf &
-                  wait
+      - name: Compile Typst Files
+        id: compile
+        shell: bash
+        run: |
+          # compile the main file
+          typst compile slides/main.typ --root=./ --font-path=${{ github.workspace }}/slides/fonts/noto-sans ${{ github.workspace }}/git-for-dummies-slides.pdf &
+          typst compile book/main.typ --root=./ --font-path=${{ github.workspace }}/book/fonts/noto-sans ${{ github.workspace }}/git-for-dummies-book.pdf &
+          wait
 
-            - name: Delete previous release
-              id: deletePreviuosRelease
-              if: steps.compile.outcome == 'success'
-              continue-on-error: true
-              shell: bash
-              run: |
-                  # Get the latest release ID
-                  LATEST_RELEASE_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.id')
+      - name: Check if both files exists
+        id: checkFiles
+        shell: bash
+        run: |
+          if [ ! -f "${{ github.workspace }}/git-for-dummies-slides.pdf" ] || [ ! -f "${{ github.workspace }}/git-for-dummies-book.pdf" ]; then
+            echo "Error: One or both PDF files are missing."
+            exit 1
+          fi
+          echo "Both PDF files exist."
+          exit 0
 
-                  # Delete the latest release
-                  if [ "$LATEST_RELEASE_ID" != "null" ]; then
-                    curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/$LATEST_RELEASE_ID"
-                  else
-                    echo "No previous release found."
-                  fi
+      - name: Delete previous release
+        id: deletePreviuosRelease
+        if: steps.checkFiles.outcome == 'success'
+        continue-on-error: true
+        shell: bash
+        run: |
+          # Get the latest release ID
+          LATEST_RELEASE_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.id')
 
-            - name: Publish Release
-              id: release
-              if: steps.compile.outcome == 'success'
-              uses: svenstaro/upload-release-action@v2
-              with:
-                  repo_token: ${{ secrets.GITHUB_TOKEN }}
-                  file: |
-                      ${{ github.workspace }}/*.pdf
-                  file_glob: true
-                  overwrite: true
-                  body: "Brief introduction to using git, GitHub and managing an organization for Professor Patrignani's Advanced Programming course"
-                  release_name: "Git for Dummies"
+          # Delete the latest release
+          if [ "$LATEST_RELEASE_ID" != "null" ]; then
+            curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/$LATEST_RELEASE_ID"
+          else
+            echo "No previous release found."
+          fi
+
+      - name: Publish Release
+        id: release
+        if: steps.compile.outcome == 'success'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: |
+            ${{ github.workspace }}/*.pdf
+          file_glob: true
+          overwrite: true
+          body: "Brief introduction to using git, GitHub and managing an organization for Professor Patrignani's Advanced Programming course"
+          release_name: "Git for Dummies"
